--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -135,7 +135,7 @@
               {{ rowData[col.field] | thaidate: "shortNoTime" }}
             </div>
             <div
-              class="text-center"
+              class="text-left"
               *ngIf="
                 col.field == 'sort' ||
                 col.field == 'type' ||
