--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -1,7 +1,9 @@
 <loading *ngIf="loading"></loading>
 <div class="container">
   <div class="text-center">
-    <h1  style="font-size: xx-large; font-weight: bolder">รายงาน{{ headerLabel }}</h1>
+    <h1 style="font-size: xx-large; font-weight: bolder">
+      รายงาน{{ headerLabel }}
+    </h1>
   </div>
   <div class="field inline-block">
     <label class="block" style="font-size: large; font-weight: bold"
@@ -24,9 +26,7 @@
   >
     <div class="inline-block mx-3">
       <div class="field inline-block">
-        <label class="mr-2 block"
-          >ลูกค้า</label
-        >
+        <label class="mr-2 block">ลูกค้า</label>
         <p-dropdown
           [options]="customersOptions"
           [(ngModel)]="customerSelected"
@@ -39,9 +39,7 @@
     </div>
     <div class="inline-block mx-3">
       <div class="field inline-block">
-        <label class="mr-2 block" 
-          >ผ้ามีปัญหา</label
-        >
+        <label class="mr-2 block">ผ้ามีปัญหา</label>
         <p-dropdown
           [options]="clotheProblemsOptions"
           [(ngModel)]="clotheProblemSelected"
@@ -52,9 +50,7 @@
         ></p-dropdown>
       </div>
       <div class="field inline-block mx-3">
-        <label class="mr-2 block"
-          >ได้รับการซัก</label
-        >
+        <label class="mr-2 block">ได้รับการซัก</label>
         <p-dropdown
           [options]="clotheStatusOptions"
           [(ngModel)]="clotheStatusSelected"
@@ -66,11 +62,15 @@
       </div>
     </div>
   </ng-container>
-  <div class="block">
+  <div
+    class="block"
+    *ngIf="
+      reportTypeSelected.value !== 'customers' &&
+      reportTypeSelected.value !== 'employees'
+    "
+  >
     <div class="field inline-block">
-      <label class="mr-2"
-        >เลือกวันที่</label
-      >
+      <label class="mr-2">เลือกวันที่</label>
       <p-calendar
         #selectedDateRange
         [(ngModel)]="dateRange"
