--- a/src/app/pages/type-cloth-management/type-cloth-management.component.html
+++ b/src/app/pages/type-cloth-management/type-cloth-management.component.html
@@ -63,6 +63,7 @@
             [icon]="'fas ' + (cloth.isDisable ? 'fa-undo' : 'fa-eye-slash')"
             class="p-button-rounded p-button-raised p-button-danger"
             (click)="onDelete(cloth.id, cloth.isDisable)"
+            title="ปิดการใช้งาน"
           ></button>
         </td>
       </tr>
