--- a/src/app/pages/customer-management/customer-management.component.html
+++ b/src/app/pages/customer-management/customer-management.component.html
@@ -66,6 +66,7 @@
             icon="fas fa-edit"
             class="p-button-rounded p-button-raised p-button-warning mx-1"
             (click)="onVisibleEditCustomer(cloth)"
+            title="แก้ไขข้อมูล"
           ></button>
           <!-- <button
             pButton
