--- a/src/app/pages/special-cloth-management/special-cloth-management.component.html
+++ b/src/app/pages/special-cloth-management/special-cloth-management.component.html
@@ -62,7 +62,7 @@
             type="button"
             [icon]="'fas ' + (cloth.isDisable ? 'fa-undo' : 'fa-eye-slash')"
             class="p-button-rounded p-button-raised p-button-danger"
-            (click)="onDelete(cloth.id, cloth.isDisable)"
+            (click)="onDelete(cloth.id, cloth.isDisable)" title="ปิดการใช้งาน"
           ></button>
         </td>
       </tr>
