--- a/src/app/pages/customer-management/customer-management.component.html
+++ b/src/app/pages/customer-management/customer-management.component.html
@@ -102,6 +102,7 @@
         mask="9-9999-99999-99-9"
         [(ngModel)]="idCard"
         [size]="80"
+        
         placeholder="x-xxxx-xxxxx-xx-x"
       ></p-inputMask>
     <!-- <input
@@ -146,6 +147,7 @@
         [size]="80"
         placeholder="999-999-9999"
       ></p-inputMask>
+  
     </div>
     <div class="field inline-block my-1 mx-1" style="width: 50%;">
       <label for="address" class="block">
@@ -474,7 +476,7 @@
         pButton
         pRipple
         class="p-button-success "
-        label="เพิ่ม"
+        label="แก้ไข"
         icon="fas fa-plus"
         style="margin-top: 1rem"
         [style]="{ width: '100px','float':'right' }"
